--- a/1noppa.html
+++ b/1noppa.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="fi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css">
     <title>Sikanoppapeli</title>
 </head>
+
 <body>
     <h1>Sikanoppapeli</h1>
     <div class="p1">
         <h2>Pelaaja1</h2>
         <p id="p1name"></p>
-        <p>Pisteet:0</p>
+        <p id="p1score">Pisteet:0</p>
     </div>
     <div class="p2">
         <h2>Pelaaja2</h2>
         <p id="p2name"></p>
-        <p>Pisteet:0</p>
+        <p id="p2score">Pisteet:0</p>
     </div>
+    <br><br>
+    <div id="die1" class="dice">0</div>
+    <br><br>
+    <button id="rollbtn" onclick="rollDice()">Heitä</button>
+    <button id="stopbtn" onclick="stop()">Lopeta</button>
+    <h2 id="status">0</h2>
+    <script src="app.js"></script>
 </body>
+
 </html>
