--- a/2noppa.html
+++ b/2noppa.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style2.css">
     <title>Sikanoppapeli</title>
 </head>
+
 <body>
     <h1>Sikanoppapeli</h1>
     <div class="p1">
@@ -18,5 +20,14 @@
         <p id="p2name"></p>
         <p>Pisteet:0</p>
     </div>
+    <br><br>
+    <div id="die1" class="dice">0</div>
+    <div id="die2" class="dice">0</div>
+    <br><br>
+    <button onclick="rollDice()">Heitä</button>
+    <br>
+    <h2 id="status"></h2>
+    <script src="app.js"></script>
 </body>
+
 </html>
