--- a/1noppa.html
+++ b/1noppa.html
@@ -10,14 +10,12 @@
 
 <body>
     <h1>Sikanoppapeli</h1>
-    <div class="p1">
-        <h2>Pelaaja1</h2>
-        <p id="p1name"></p>
+    <div class="p1" id="p1">
+        <h2 id="p1name">Pelaaja1</h2>
         <p id="p1score">Pisteet:0</p>
     </div>
-    <div class="p2">
-        <h2>Pelaaja2</h2>
-        <p id="p2name"></p>
+    <div class="p2" id="p1">
+        <h2 id="p2name">Pelaaja2</h2>
         <p id="p2score">Pisteet:0</p>
     </div>
     <br><br>
