--- a/1noppa.html
+++ b/1noppa.html
@@ -19,11 +19,13 @@
         <p id="p2score">Pisteet:0</p>
     </div>
     <br><br>
-    <div id="die1" class="dice">0</div>
+    <div id="die" class="dice">0</div>
     <br><br>
     <button id="rollbtn" onclick="rollDice()">Heitä</button>
-    <button id="stopbtn" onclick="stop()">Lopeta</button>
-    <h2 id="status">0</h2>
+    <button id="stopbtn">Lopeta</button>
+    <h2 id="score">0</h2>
+
+
     <script src="app.js"></script>
 </body>
 
