pisteiden talletus ja vuorot koodattu.

--- a/1noppa.html
+++ b/1noppa.html
@@ -22,9 +22,8 @@
     <div id="die" class="dice">0</div>
     <br><br>
     <button id="rollbtn" onclick="rollDice()">Heitä</button>
-    <button id="stopbtn">Lopeta</button>
+    <button id="getscorebtn">Kerää Pisteet</button>
     <h2 id="score">0</h2>
-
 
     <script src="app.js"></script>
 </body>
