--- a/1noppa.html
+++ b/1noppa.html
@@ -25,6 +25,10 @@
     <button id="getscorebtn">Kerää Pisteet</button>
     <h2 id="score">0</h2>
 
+    <a id="dicegif" href="https://www.animatedimages.org/cat-dice-710.htm"><img
+            src="https://www.animatedimages.org/data/media/710/animated-dice-image-0024.gif" border="0"
+            alt="animated-dice-image-0024" /></a>
+
     <script src="app.js"></script>
 </body>
 
