--- a/1noppa.html
+++ b/1noppa.html
@@ -19,7 +19,7 @@
         <p id="p2score">Pisteet:0</p>
     </div>
     <br><br>
-    <div id="die" class="dice">0</div>
+    <img src="img/dice1.png" name="die" id="die" class="dice">
     <br><br>
     <button id="rollbtn" onclick="rollDice()">Heitä</button>
     <button id="getscorebtn">Kerää Pisteet</button>
@@ -31,5 +31,7 @@
 
     <script src="app.js"></script>
 </body>
+
+
 
 </html>
