alkusivun värin vaihto kesken

--- a/1noppa.html
+++ b/1noppa.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Sikanoppapeli</h1>
+
+    <h2 id="winscore">Pistettä voittoon:50</h2>
+
     <div class="p1" id="p1">
         <h2 id="p1name">Pelaaja1</h2>
         <p id="p1score">Pisteet:0</p>
@@ -25,13 +28,9 @@
     <button id="getscorebtn">Kerää Pisteet</button>
     <h2 id="score">0</h2>
 
-    <a id="dicegif" href="https://www.animatedimages.org/cat-dice-710.htm"><img
-            src="https://www.animatedimages.org/data/media/710/animated-dice-image-0024.gif" border="0"
-            alt="animated-dice-image-0024" /></a>
+    <img id="dicegif" src="img/dice.gif">
 
     <script src="app.js"></script>
 </body>
-
-
 
 </html>
