väri valitsin tehty

--- a/1noppa.html
+++ b/1noppa.html
@@ -30,6 +30,16 @@
 
     <img id="dicegif" src="img/dice.gif">
 
+    <div id="p1won">
+        <h2>Pelaaja1 voitti</h2>
+        <button class="playagainbtn"><a href="index.html"></a>Pelaa uudestaan</button>
+    </div>
+
+    <div id="p2won">
+        <h2>Pelaaja2 voitti</h2>
+        <button class="playagainbtn"><a href="index.html"></a>Pelaa uudestaan</button>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
