peli kahdella nopalla aloitettu

--- a/1noppa.html
+++ b/1noppa.html
@@ -40,7 +40,7 @@
         <button class="playagainbtn"><a href="index.html"></a>Pelaa uudestaan</button>
     </div>
 
-    <script src="app.js"></script>
+    <script src="1dice.js"></script>
 </body>
 
 </html>
