style2 ja 2noppa tehty

--- a/1noppa.html
+++ b/1noppa.html
@@ -22,7 +22,7 @@
         <p id="p2score">Pisteet:0</p>
     </div>
     <br><br>
-    <img src="img/dice1.png" name="die" id="die" class="dice">
+    <img src="img/dice1.png" name="die" id="die" class="dice1">
     <br><br>
     <button id="rollbtn" onclick="rollDice()">Heitä</button>
     <button id="getscorebtn">Kerää Pisteet</button>
