--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     </div>
     <div class="form">
-        <form action="#" id="form">
+        <form action="/" id="form">
             <div>
                 <label for="p1name">Nimi:</label>
                 <input type="text" id="p1name" placeholder="Pelaaja1">
