--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                 <br><br>
             </div>
 
-            <input type="submit" value="Tallenna" id="savebtn" onclick="getData()">
+            <button id="savebtn" onclick="getData()"><a href="1noppa.html" id="dice1link"></a> <a href="2noppa.html"
+                    id="dice2link"></a> Tallenna</button>
         </form>
     </div>
 
