--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     </div>
     <div class="form">
-        <form action="/" id="form">
+        <form name="gameForm" id="form">
             <div>
                 <label for="p1name">Nimi:</label>
                 <input type="text" id="p1name" placeholder="Pelaaja1">
@@ -109,10 +109,10 @@
             </div>
             <br>
             <div>
-                <input type="radio" id="dice1" value="dice1" name="dice" checked="checked">
+                <input type="radio" id="dice1" value="1noppa.html" name="dice" checked="checked">
                 <label for="dice1">1 Noppa</label>
                 <br><br>
-                <input type="radio" id="dice2" value="dice2" name="dice">
+                <input type="radio" id="dice2" value="2noppa.html" name="dice">
                 <label for="dice2">2 Noppaa</label>
                 <br><br>
             </div>
@@ -128,8 +128,7 @@
                 <br><br>
             </div>
 
-            <button id="savebtn" onclick="getData()"><a href="1noppa.html" id="dice1link"></a> <a href="2noppa.html"
-                    id="dice2link"></a> Tallenna</button>
+            <button id="savebtn">Tallenna</button>
         </form>
     </div>
 
