--- a/2noppa.html
+++ b/2noppa.html
@@ -11,13 +11,13 @@
 <body>
     <h1>Sikanoppapeli</h1>
 
-    <h2 id="winscore">Pistettä voittoon:50</h2>
+    <h2>Pistettä voittoon:<span id="winScore"></span></h2>
 
     <div class="p1" id="p1">
         <h2 id="p1name">Pelaaja1</h2>
         <p id="p1score">Pisteet:0</p>
     </div>
-    <div class="p2" id="p1">
+    <div class="p2" id="p2">
         <h2 id="p2name">Pelaaja2</h2>
         <p id="p2score">Pisteet:0</p>
     </div>
