--- a/1noppa.html
+++ b/1noppa.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Sikanoppapeli</h1>
 
-    <h2>Pistettä voittoon:<span id="winScore"></span></h2>
+    <h2 id="winscore">Pistettä voittoon:<span id="winScore"></span></h2>
 
     <div class="p1" id="p1">
         <h2 id="p1name">Pelaaja1</h2>
