--- a/2noppa.html
+++ b/2noppa.html
@@ -31,12 +31,12 @@
 
     <div id="p1won">
         <h2>Pelaaja1 voitti</h2>
-        <button class="playagainbtn"><a href="index.html"></a>Pelaa uudestaan</button>
+        <button class="playagainbtn" onclick="window.location.href='index.html'">Pelaa uudestaan</button>
     </div>
 
     <div id="p2won">
         <h2>Pelaaja2 voitti</h2>
-        <button class="playagainbtn"><a href="index.html"></a>Pelaa uudestaan</button>
+        <button class="playagainbtn" onclick="window.location.href='index.html'">Pelaa uudestaan</button>
     </div>
 
     <script src="2dice.js"></script>
